objects/Sync_Field__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List of fields to sync between two objects.</description>
    <fields>
        <fullName>Source_Field_API_Name__c</fullName>
        <inlineHelpText>The API Name of the Field where the value will originate from.</inlineHelpText>
        <label>Source Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object_API_Name__c</fullName>
        <inlineHelpText>The API Name of the object where the values will originate from.</inlineHelpText>
        <label>Source Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Record_Type_Developer_Name__c</fullName>
        <inlineHelpText>Developer name of the source object&apos;s record type that should be synchronized.</inlineHelpText>
        <label>Source Record Type Developer Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field_API_Name__c</fullName>
        <inlineHelpText>The API Name of the Field where the source value will populate.</inlineHelpText>
        <label>Target Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Object_API_Name__c</fullName>
        <inlineHelpText>The API Name of the Object that the value will be pushed to.</inlineHelpText>
        <label>Target Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Sync Field</label>
</CustomObject>